[package]
authors = ["lholznagel <contact@lholznagel.info>"]
description = "Small and simple rust logger"
documentation = "https://github.com/lholznagel/loggify"
homepage = "https://github.com/lholznagel/loggify"
license = "MIT"
name = "loggify"
readme = "readme.md"
repository = "https://github.com/lholznagel/loggify"
version = "1.1.0"
edition = "2018"

exclude = [
  "assets/*",
  "examples/*",
  ".editorconfig",
  ".gitignore",
  ".travis.yml",
  "Makefile",
  "readme.md"
]

[dependencies]
log = { version = "0.4.6", features = ["std"] }
chrono = "0.4.6"
